# python-project-lvl3

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: linter.yml
pageload/: cli.py  config.py  fs.py  html.py  logging.py  page_loader.py  pageload.py  parse.py  repository.py  url.py
pageload/scripts/: main.py  page_loader.py  pageload.py
tests/: test_exceptions.py  test_fs.py  test_html.py  test_page_loader.py  test_pageload.py  test_parser.py
tests/fixtures/: expected.html  script.js  test_page.html
