[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page Loader"
authors = ["Aleksandr Pletnev <alekspletnev@gmail.com>"]
repository = "https://github.com/pletnev-aa/python-project-lvl3"
packages = [
    { include = "pageload" },
]


[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
html5lib = "^1.1"
progress = "^1.5"

[tool.poetry.scripts]
pageload = 'pageload.scripts.page_loader:main'

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest-cov = "^2.11.1"
pytest = "^6.2.1"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
classifiers = [
    "Programming Language :: Python :: 3.6",
]
